[package]
name = "esp_pwm_reader"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Wrapper around the mcpwm capture module for reading pwm signals."
homepage = "https://github.com/daschr/esp_pwm_reader"
repository = "https://github.com/daschr/esp_pwm_reader"
include = [
  "src/",
  "Cargo.toml"  
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-svc = { version = "0.47", default-features = false }
esp-idf-sys = { version = "0.33", default-features = true, features = ["native"] }
esp-idf-hal = "0.42"

[build-dependencies]
embuild = "0.31.3"